matroskaparse: warn if accumulating headers after they were pushed

https://bugzilla.gnome.org/show_bug.cgi?id=665412